-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.989 2011-04-28 02:27:12 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-27	pwessel
	* gmt_map.c:		Store projected min/max in meters in current->rect_m[].
	* spotter/grdrotater_func.c:	Ensure that output grid xmin/xmax honors the current
				FORMAT_GEO_OUT range settings.
	* mapproject_func.c:	Used GMT_IN instead of GMT_OUT in output format of longitudes.

2011-04-27	remko
	* gmt_customio.c:	Now contains grid format descriptions and IDs.
	* Grdformat.txt, gmt_grdformats.h, grdinfo.h, grdreformat.h:	Removed, no longer needed.
	* gmt_grdio.c:		Better handling of grids off by 360 degrees in longitude.
				Included in magic: look if grid can be read by GDAL.
	* gmt_gdalread.c:	Added GMT_is_gdal_grid.
	* gmt_plot.c:		Rotate annotations by 180 degrees when "seen from North" in 3D.

2011-04-26	pwessel
	* grdblend_func.c:	Can now take a list of grids (e.g., *.nc) instead of the
				blendfile when all weights should be 1 and the interior
				region should be set to the gridfile region.

2011-04-26	remko
	* test/grdview/cuerpo.sh:	New test based on query by Eduardo Suarez.
	* gmt_grdio.c:		GMT_adjust_loose_wesn failed on grid with lon bounds both < 0.
	* gmt_grdkeys.h:	Contains #define GMT_GRD_IS_??, automatically numbered.

2011-04-26	jluis
	* grdimage_func.c:	Replaced -d & -F by -A<file>=driver
	* gmt_gdalwrite.c:	New function to write files via GDAL (very little testing)
	* gmt_gdalread.h:	Add new struct to interface with GMT_gdalwrite
	* grdimage_func.c:	Add new (still undocumented) options -d & -F to allow saving
				images directly in raster formats via GDAL.
				
2011-04-26	pwessel
	* gmt_support.c:	All boundcond functions modified as old structs EDGEINFO and
				BCR are simplified into a few parameters in the GRDHEADER,
				eliminating overhead.